# leads.backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_create_raw_leads_and_scrape_runs.py  002_add_enrichment_tables.py  003_rename_stack_mentions_to_keywords.py  004_add_target_prospects.py
docs/: enrichment-pipeline-design.md  leads-pipeline-redesign.md
src/: __init__.py  config.py  container.py  main.py
src/api/: dependencies.py  routes.py  schemas.py
src/application/: bus.py  workers.py
src/domain/: events.py  interfaces.py  models.py
src/infrastructure/: anthropic_provider.py  bus_publisher.py  db.py  http_client.py  openai_provider.py  postgres_repo.py  prompt_loader.py
src/prompts/: company_resolution.jinja2  lead_classification.jinja2
tests/: conftest.py  test_browser_fetcher.py  test_dedup.py  test_enrichment_integration.py  test_enrichment_stages.py  test_event_bus.py  test_funding_adapter.py  test_google_cse_adapter.py  test_hackernews_adapter.py  test_hnhiring_adapter.py  test_http_fetcher.py  test_integration.py  test_linkedin_adapter.py  test_linkedin_enricher.py  test_orchestrator.py  test_producthunt_adapter.py  test_prospect_repository.py  test_reddit_adapter.py  test_remoteok_adapter.py  test_resweeper.py  test_rss_fetcher.py  test_rss_multi_adapter.py  test_scoring.py  test_wellfound_adapter.py
tests/fixtures/: malformed_rss.xml  sample_funding_rss.xml  sample_google_cse_response.json  (+2 more)
(+29 files in other folders)
